# geek-intro-fastapi

./: README.md  pyproject.toml
client/: bruno.json  root.bru
geek_intro_fastapi/: app.py
